# radar_human_detectmon

./: CMakeLists.txt  README.md  idf_component.yml  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml
main/app/: app_play_wav.c  app_play_wav.h  esp32s3_box3_appmain.c  radar_sensor.c  radar_sensor.h  read_chip_info.c  wifi_stream.c  wifi_stream.h
main/gui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
main/gui/components/: ui_comp_hook.c
main/gui/images/: ui_img_1892761737.c  ui_img_fall_png.c  ui_img_posture1_png.c  ui_img_posture2_png.c  ui_img_posture3_png.c  ui_img_posture4_png.c  ui_img_posture5_png.c  ui_img_radaricon2_png.c  ui_img_radaricon_png.c  ui_img_safe_png.c
main/gui/screens/: ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_Screen4.c  ui_Screen4.h  ui_screen1.c  ui_screen1.h
pc_app/: HumanRadar_PC_Visualizer.cp313-win_amd64.pyd  LD6001B_PC4.2_WIFI.py  LD6001B_PC4.2_WIFI_V1.py  LD6001B_PC4.4.0.py  Radar_PointCloud_PC_Visualizer.py  config.json  convert_audio_for_esp32s3.py  main.py  temp.c
pc_app/build_src/: Radar_PointCloud_PC_Visualizer.spec  config.json
spiffs/: Readme.txt
